[package]
name = "sigctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","sync"] }
serialport = "4"
log = "0.4"
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"